--- a/src/modals.less
+++ b/src/modals.less
@@ -345,6 +345,7 @@
                     display: flex;
                     flex-direction: row;
                     align-items: center;
+                    width: 135px;
                 }
 
                 .settings-field .settings-input .undo-icon {
